--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <p id="computerScore">Computer:</p>
     <p id="finalResult"></p>
     <!-- 1) Result -->
-    <p id="reslt" class="result">4 points = Win</p>
+    <p>⚠️ 4 Points = Win!</p>
+    <p id="result" class="result"></p>
 
     <!-- 2) Computer vs User (row) -->
     <section class="battle">
@@ -42,4 +43,5 @@
   <script src="index.js"></script>
 </body>
 </html>
+
 
